# ESP32_project

./: CMakeLists.txt  README.md  command.txt  gen_image  partitions_example.csv  sdkconfig
components/Ink_Screen/: CMakeLists.txt  E2213JS0C1.c  E2213JS0C1.h  UIcode.cpp  font.h
components/cmd_ota/: CMakeLists.txt  cmd_ota.c  cmd_ota.h  simple_ota.c
components/https_request/: CMakeLists.txt  https_request.c
main/: CMakeLists.txt  blink.c  cmd_decl.h  cmd_wifi.c  config.h  console.c  console.h  main.c  user_main.c  user_main.h
